--- a/index.html
+++ b/index.html
@@ -1,85 +1,106 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <title>Mi Portafolio</title>
-    <link href="styles.css" rel="stylesheet" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald&display=swap"
-      rel="stylesheet"
-    />
-  </head>
+	<head>
+		<meta charset="utf-8" />
+		<meta content="width=device-width, initial-scale=1" name="viewport" />
+		<title>Mi Portafolio</title>
+		<link href="styles.css" rel="stylesheet" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald&display=swap"
+			rel="stylesheet"
+		/>
+	</head>
 
-  <body>
-    <div class="header-img"></div>
-    <div class="header">Juliana Gomez</div>
-    <div class="subtitle">Front End Developer</div>
-    <div class="navigation">
-      <div class="nav-item">Acerca de</div>
-      <div class="nav-item">Mis Proyectos</div>
-      <div class="nav-item">Contacto</div>
-    </div>
+	<body>
+		<a href="#main" class="skip-link">Saltar al contenido</a>
+		<header>
+			<img src="./images/juliana.jpeg" class="header-img" alt="Imagen Juliana Gomez"/>
+			<h1 class="header">Juliana Gomez</h1>
+			<h2 class="subtitle">Front End Developer</h2>
+			<nav>
+				<ul class="navigation">
+					<li class="nav-item"> <a href="acerca-de"> Acerca de</a></li>
+					<li class="nav-item"><a href="mis-proyectos">Mis Proyectos</a></li>
+					<li class="nav-item"><a href="contacto">Contacto</a></li>
+				</ul>
+			</nav>
+		</header>
+		<main id="main">
+			<section>
+				<div class="intro">
+					<h2 class="header">Acerca de mi</h2>
+					<p>
+						Hola! Soy Juliana 👋 Soy Colombo-Canadiense, amo los gatos y tambien crear
+						cosas lindas para la web 😍 Después de estudiar comunicación social y
+						ciencia política en la universidad, trabajé varios años en mercadeo
+						digital hasta que aprendí a programar. Llevo un poco más de tres años
+						enfocándome en front end, específicamente en JavaScript y accesibilidad.
+						Sueño con una web donde todo el mundo pueda participar. Aquí puedes ver
+						algunos de mis proyectos recientes y también puedes contactarme por si
+						quieres hablar de tecnología, accesibilidad o gatos!
+					</p>
+					<ul class="social-media">
+						<li>
+							<a href="https://twitter.com/gmzjuliana" target="_blank"
+								><img src="images/twitter.png" alt="Twitter"
+							/>
+							<p class="social-link-text">Twitter</p>
+						</a>
+						</li>
+						<li>
+							<a href="https://github.com/gmzjuliana" target="_blank"
+								><img src="images/github-logo.png" alt="Github"
+							/>
+							<p class="social-link-text">Github</p>
+						</a>
+						</li>
+						<li>
+							<a href="https://www.linkedin.com/in/gomezjuliana/" target="_blank"
+								><img src="images/linkedin.png" alt="Linkedin"
+							/>
+							<p class="social-link-text">Linkedin</p>
+						</a>
+						</li>
+					</ul>
+				</div>
+			</section>
 
-    <div class="intro">
-      Hola! Soy Juliana 👋 Soy Colombo-Canadiense, amo los gatos y tambien crear
-      cosas lindas para la web 😍 Después de estudiar comunicación social y
-      ciencia política en la universidad, trabajé varios años en mercadeo
-      digital hasta que aprendí a programar. Llevo un poco más de tres años
-      enfocándome en front end, específicamente en JavaScript y accesibilidad.
-      Sueño con una web donde todo el mundo pueda participar. Aquí puedes ver
-      algunos de mis proyectos recientes y también puedes contactarme por si
-      quieres hablar de tecnología, accesibilidad o gatos!
-      <div class="social-media">
-        <div>
-          <a href="https://twitter.com/gmzjuliana" target="_blank"
-            ><img src="images/twitter.png"
-          /></a>
-        </div>
-        <div>
-          <a href="https://github.com/gmzjuliana" target="_blank"
-            ><img src="images/github-logo.png"
-          /></a>
-        </div>
-        <div>
-          <a href="https://www.linkedin.com/in/gomezjuliana/" target="_blank"
-            ><img src="images/linkedin.png"
-          /></a>
-        </div>
-      </div>
-    </div>
+			<section>
+				<h2 class="header">Mis proyectos</h2>
+				<div class="carousel">
+					<div class="arrow arrow-left" aria-label="backward button"></div>
+					<div class="window">
+						<ul class="project-container">
+							<li><button><img src="./images/project1.png" class="project project1" alt="Imagen proyecto 1"></button></li>
+							<li><button><img src="./images/project2.png" class="project project2" alt="Imagen proyecto 2"></button></li>
+							<li><button><img src="./images/project3.png" class="project project3" alt="Imagen proyecto 3"></button></li>
+							<li><button aria-hidden="true"><img src="./images/project4.png" class="project project4" alt="Imagen proyecto 4"></button></li>
+							<li><button aria-hidden="true"><img src="./images/project5.png" class="project project5" alt="Imagen proyecto 5"></button></li>
+						</ul>
+					</div>
+					<div class="arrow arrow-right" aria-label="forward button"></div>
+				</div>
+			</section>
+		</main>
 
-    <div class="carousel">
-      <div class="arrow arrow-left"></div>
-      <div class="window">
-        <div class="project-container">
-          <div class="project project1"></div>
-          <div class="project project2"></div>
-          <div class="project project3"></div>
-          <div class="project project4"></div>
-          <div class="project project5"></div>
-        </div>
-      </div>
-      <div class="arrow arrow-right"></div>
-    </div>
 
-    <div class="contact-section">
-      <div class="header">Contacto</div>
-      <div class="form-container">
-        Nombre<input type="text" /> <br />
-        Correo<input type="text" /> <br />
-        <div class="message-input">Mensaje<input type="text" /> <br /></div>
-        <div class="send-button">Enviar</div>
-      </div>
-    </div>
-    <div class="notification">El formulario fue enviado sin errores</div>
-    <div class="modal-container">
-      <div class="modal">
-        Ejemplo de un proyecto mio
-        <div class="modal-project-image"></div>
-      </div>
-    </div>
+		<footer class="contact-section">
+			<div class="header">Contacto</div>
+			<form class="form-container">
+				<p class="form-label">Nombre</p><input type="text" aria-label="input nombre" /> <br />
+				<p class="form-label">Correo</p><input type="text" aria-label="input correo" /> <br />
+				<p class="form-label">Mensaje</p><textarea></textarea>
+				<div class="send-button" aria-label="form input button">Enviar</div>
+			</form>
+		</footer>
+		<div class="notification">El formulario fue enviado sin errores</div>
+		<div class="modal-container">
+			<div class="modal">
+				Ejemplo de un proyecto mio
+				<div class="modal-project-image"></div>
+			</div>
+		</div>
 
-    <script src="index.js" type="text/javascript"></script>
-  </body>
+		<script src="index.js" type="text/javascript"></script>
+	</body>
 </html>
