--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<section>
 				<h2 class="header">Mis proyectos</h2>
 				<div class="carousel">
-					<div class="arrow arrow-left" aria-label="backward button"></div>
+					<button class="arrow arrow-left" aria-label="backward button"></button>
 					<div class="window">
 						<ul class="project-container">
 							<li><button><img src="./images/project1.png" class="project project1" alt="Imagen proyecto 1"></button></li>
@@ -78,7 +78,7 @@
 							<li><button aria-hidden="true"><img src="./images/project5.png" class="project project5" alt="Imagen proyecto 5"></button></li>
 						</ul>
 					</div>
-					<div class="arrow arrow-right" aria-label="forward button"></div>
+					<button class="arrow arrow-right" aria-label="forward button"></button>
 				</div>
 			</section>
 		</main>
@@ -87,8 +87,8 @@
 		<footer class="contact-section">
 			<div class="header">Contacto</div>
 			<form class="form-container">
-				<p class="form-label">Nombre</p><input type="text" aria-label="input nombre" /> <br />
-				<p class="form-label">Correo</p><input type="text" aria-label="input correo" /> <br />
+				<p class="form-label">Nombre</p><input class="input" type="text" aria-label="input nombre" /> <br />
+				<p class="form-label">Correo</p><input class="input" type="text" aria-label="input correo" /> <br />
 				<p class="form-label">Mensaje</p><textarea></textarea>
 				<div class="send-button" aria-label="form input button">Enviar</div>
 			</form>
